# CodingWork

./: README.md
Classwork/Artificial_Intelligence_Class/Agent_Roomba/: README.md  agent.py  bedroom_env.py  environment.py  main.py  toybot.py
Classwork/Artificial_Intelligence_Class/Card_Default_Classifier/: README.md  learnProblem.py  main.py  model_writeup.txt  utilities.py
Classwork/ComputationalProblemSolving/: AdHocBeekeeper.py  AdHocVolim.py  DivideDVDs.py  GraphKastenlauf.py  Graphs2TexasSummers.py  GreedyOpeningCeremony.py  OtherBingItOn.py  OtherSuperComputer.py  README.md  SearchFallingMugs.py  SearchTower.py
Classwork/DistributedSystems/BasicKVS/: CMakeLists.txt  README.md  best_teams_KVS.h  main.cpp
Classwork/DistributedSystems/BasicKVS/tests/: example_tests.cpp
Classwork/DistributedSystems/KVS_With_Raft/: KVS.py  README.md  common.py  main.py  raft.proto  raft_client_manager.py  raft_node.py  raft_servicer.py  test_client.py
Classwork/DistributedSystems/KVS_With_Raft/rpc/: raft_pb2.py  raft_pb2.pyi  raft_pb2_grpc.py
WebsiteForPADesignComp/Website_2nd_Place/: README.md
